--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-291-09
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Page Title</title>
+</head>
+<body>
+
+	<h1>This is a heading</h1>
+	<p>This is a paragraph.</p>
+
+</body>
+</html>
+
+
