--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Page Title</title>
-</head>
+  <head>
+  music
+     <style>
+       body {background-color:lightyellow;}
+        h1 {color: pink;}
+    </style>
+   
+    <meta charset="UTF-8">
+    <meta name="description" content ="foundation of music">
+<meta name="keywords" content= "music, instrument, tutorial">
+    <meta name="author" content= "amber">
+   
+  </head>
 <body>
-
-	<h1>This is a heading</h1>
-	<p>This is a paragraph.</p>
-
+    <h1> main heading </h1>
+    <p style="color:powderblue;"> this is the main text </p>
 </body>
 </html>
 
